AGU and then Sleep

--- a/notebooks/jupyter/Zonal_Stats.ipynb
+++ b/notebooks/jupyter/Zonal_Stats.ipynb
@@ -13,19 +13,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'rasterstats'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-91e63ff80d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mrasterstats\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mzonal_stats\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrasterio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mzone_stat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraster\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mband\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpolygon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \"\"\"\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'rasterstats'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from rasterstats import zonal_stats\n",
     "import rasterio\n",
@@ -43,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,31 +42,51 @@
     "#outfilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/temp_data/\" # git will not ignore - NO BIG FILES \n",
     "\n",
     "# Local computer \n",
-    "data = '/Users/cascade/Github/NTL/data/raw/grumpdata/Raster/'\n",
+    "data = '/Users/cascade/Github/NTL/data/raw/'\n",
     "temp_data = '/Users/cascade/Github/NTL/temp_data/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "\n",
-    "GRUMP2000_poly = gpd.read_file(temp_data+'20181205_GRUMP2000_mask_1000c600_polypoints.shp')\n",
-    "GRUMP2015_poly = gpd.read_file(temp_data+'20181205_GRUMP2015_mask_1000c600_polypoints.shp')\n",
+    "# GRUMP2000_poly = gpd.read_file(temp_data+'20181207_GRUMP2000_mask_1000c600_polypoints.shp')\n",
+    "# GRUMP2015_poly = gpd.read_file(temp_data+'20181207_GRUMP2015_mask_1000c600_polypoints.shp')\n",
     "\n",
-    "file1 = 'gpw-v4-population-count-adjusted-to-2015-unwpp-country-totals-rev10_2000_30_sec_tif/gpw_v4_population_count_adjusted_to_2015_unwpp_country_totals_rev10_2000_30_sec.tif'\n",
-    "file2 = 'gpw-v4-population-count-adjusted-to-2015-unwpp-country-totals-rev10_2015_30_sec_tif/gpw_v4_population_count_adjusted_to_2015_unwpp_country_totals_rev10_2015_30_sec.tif'\n",
+    "# file1 = 'gpw-v4-population-count-adjusted-to-2015-unwpp-country-totals-rev10_2000_30_sec_tif/gpw_v4_population_count_adjusted_to_2015_unwpp_country_totals_rev10_2000_30_sec.tif'\n",
+    "# file2 = 'gpw-v4-population-count-adjusted-to-2015-unwpp-country-totals-rev10_2015_30_sec_tif/gpw_v4_population_count_adjusted_to_2015_unwpp_country_totals_rev10_2015_30_sec.tif'\n",
     "\n",
-    "GRUMP2000_raster = rasterio.open(data+file1)                      \n",
-    "GRUMP2015_raster = rasterio.open(data+file2)  "
+    "# GRUMP2000_raster = rasterio.open(data+file1)                      \n",
+    "# GRUMP2015_raster = rasterio.open(data+file2)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "\n",
+    "WP2000_poly = gpd.read_file(temp_data+'20181207_africa1k_2000_mask_1000c600_polypoints.shp')\n",
+    "WP2015_poly = gpd.read_file(temp_data+'20181207_africa1k_2015_mask_1000c600_polypoints.shp')\n",
+    "\n",
+    "file1 = 'worldpop/Africa-1km-Population/AFR_PPP_2000_adj_v2.tif'\n",
+    "file2 = 'worldpop/Africa-1km-Population/AFR_PPP_2015_adj_v2.tif'\n",
+    "# file1 = 'gpw-v4-population-count-adjusted-to-2015-unwpp-country-totals-rev10_2000_30_sec_tif/gpw_v4_population_count_adjusted_to_2015_unwpp_country_totals_rev10_2000_30_sec.tif'\n",
+    "# file2 = 'gpw-v4-population-count-adjusted-to-2015-unwpp-country-totals-rev10_2015_30_sec_tif/gpw_v4_population_count_adjusted_to_2015_unwpp_country_totals_rev10_2015_30_sec.tif'\n",
+    "\n",
+    "WP2000_raster = rasterio.open(data+file1)                      \n",
+    "WP2015_raster = rasterio.open(data+file2)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -91,12 +99,12 @@
     }
    ],
    "source": [
-    "GRUMP2000_zonalstats = zone_stat(GRUMP2000_raster, 1, GRUMP2000_poly)"
+    "WP2000_zonalstats = zone_stat(WP2000_raster, 1, WP2000_poly)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -122,88 +130,116 @@
        "      <th></th>\n",
        "      <th>osm_id</th>\n",
        "      <th>FID</th>\n",
+       "      <th>country</th>\n",
+       "      <th>city</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
        "      <th>geometry</th>\n",
-       "      <th>GRUMP2000_PopTot</th>\n",
+       "      <th>WP2000_PopTot</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>27564946</td>\n",
-       "      <td>260</td>\n",
-       "      <td>POLYGON ((6.491667 36.466667, 6.5 36.466667, 6...</td>\n",
-       "      <td>5.542145e+05</td>\n",
+       "      <td>901</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Constantine</td>\n",
+       "      <td>36.364519</td>\n",
+       "      <td>6.608260</td>\n",
+       "      <td>POLYGON ((6.616249 36.46625, 6.649583 36.46625...</td>\n",
+       "      <td>529187.787720</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>27565103</td>\n",
-       "      <td>497</td>\n",
-       "      <td>POLYGON ((-0.566667 35.775, -0.55 35.775, -0.5...</td>\n",
-       "      <td>9.321878e+05</td>\n",
+       "      <td>1734</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Oran</td>\n",
+       "      <td>35.703275</td>\n",
+       "      <td>-0.649298</td>\n",
+       "      <td>POLYGON ((-0.808751 35.774584, -0.792084 35.77...</td>\n",
+       "      <td>687663.377167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>262963217</td>\n",
-       "      <td>1213</td>\n",
-       "      <td>POLYGON ((6.883333 33.433333, 6.9 33.433333, 6...</td>\n",
-       "      <td>1.077895e+05</td>\n",
+       "      <td>253292160</td>\n",
+       "      <td>338</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Tizi Ouzou</td>\n",
+       "      <td>36.713784</td>\n",
+       "      <td>4.049392</td>\n",
+       "      <td>POLYGON ((4.007916 36.757917, 4.024583 36.7579...</td>\n",
+       "      <td>214199.763611</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>288387133</td>\n",
-       "      <td>70</td>\n",
-       "      <td>POLYGON ((3.008333 36.825, 3.016667 36.825, 3....</td>\n",
-       "      <td>3.015573e+06</td>\n",
+       "      <td>262963217</td>\n",
+       "      <td>3564</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>El Oued</td>\n",
+       "      <td>33.361177</td>\n",
+       "      <td>6.860349</td>\n",
+       "      <td>POLYGON ((6.816249 33.41625, 6.841249 33.41625...</td>\n",
+       "      <td>103269.415649</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>288417925</td>\n",
-       "      <td>292</td>\n",
-       "      <td>POLYGON ((2.75 36.341667, 2.758333 36.341667, ...</td>\n",
-       "      <td>1.279876e+05</td>\n",
+       "      <td>262964638</td>\n",
+       "      <td>3643</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Touggourt</td>\n",
+       "      <td>33.109897</td>\n",
+       "      <td>6.066102</td>\n",
+       "      <td>POLYGON ((6.066249 33.149584, 6.082916 33.1495...</td>\n",
+       "      <td>62320.847595</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>288418022</td>\n",
-       "      <td>203</td>\n",
-       "      <td>POLYGON ((2.883333 36.616667, 2.9 36.616667, 2...</td>\n",
-       "      <td>3.720047e+05</td>\n",
+       "      <td>264573224</td>\n",
+       "      <td>3337</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Laghouat</td>\n",
+       "      <td>33.806352</td>\n",
+       "      <td>2.880862</td>\n",
+       "      <td>POLYGON ((2.849583 33.86625, 2.866249 33.86625...</td>\n",
+       "      <td>139356.007751</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      osm_id   FID                                           geometry  \\\n",
-       "0   27564946   260  POLYGON ((6.491667 36.466667, 6.5 36.466667, 6...   \n",
-       "1   27565103   497  POLYGON ((-0.566667 35.775, -0.55 35.775, -0.5...   \n",
-       "2  262963217  1213  POLYGON ((6.883333 33.433333, 6.9 33.433333, 6...   \n",
-       "3  288387133    70  POLYGON ((3.008333 36.825, 3.016667 36.825, 3....   \n",
-       "4  288417925   292  POLYGON ((2.75 36.341667, 2.758333 36.341667, ...   \n",
-       "5  288418022   203  POLYGON ((2.883333 36.616667, 2.9 36.616667, 2...   \n",
+       "      osm_id   FID  country         city        lat       lon  \\\n",
+       "0   27564946   901  Algeria  Constantine  36.364519  6.608260   \n",
+       "1   27565103  1734  Algeria         Oran  35.703275 -0.649298   \n",
+       "2  253292160   338  Algeria   Tizi Ouzou  36.713784  4.049392   \n",
+       "3  262963217  3564  Algeria      El Oued  33.361177  6.860349   \n",
+       "4  262964638  3643  Algeria    Touggourt  33.109897  6.066102   \n",
+       "5  264573224  3337  Algeria     Laghouat  33.806352  2.880862   \n",
        "\n",
-       "   GRUMP2000_PopTot  \n",
-       "0      5.542145e+05  \n",
-       "1      9.321878e+05  \n",
-       "2      1.077895e+05  \n",
-       "3      3.015573e+06  \n",
-       "4      1.279876e+05  \n",
-       "5      3.720047e+05  "
+       "                                            geometry  WP2000_PopTot  \n",
+       "0  POLYGON ((6.616249 36.46625, 6.649583 36.46625...  529187.787720  \n",
+       "1  POLYGON ((-0.808751 35.774584, -0.792084 35.77...  687663.377167  \n",
+       "2  POLYGON ((4.007916 36.757917, 4.024583 36.7579...  214199.763611  \n",
+       "3  POLYGON ((6.816249 33.41625, 6.841249 33.41625...  103269.415649  \n",
+       "4  POLYGON ((6.066249 33.149584, 6.082916 33.1495...   62320.847595  \n",
+       "5  POLYGON ((2.849583 33.86625, 2.866249 33.86625...  139356.007751  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "GRUMP2000_poly['GRUMP2000_PopTot'] = gpd.GeoDataFrame.from_dict(GRUMP2000_zonalstats)\n",
-    "GRUMP2000_poly.head(6)"
+    "WP2000_poly['WP2000_PopTot'] = gpd.GeoDataFrame.from_dict(WP2000_zonalstats)\n",
+    "WP2000_poly.head(6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -237,93 +273,122 @@
        "      <th></th>\n",
        "      <th>osm_id</th>\n",
        "      <th>FID</th>\n",
+       "      <th>country</th>\n",
+       "      <th>city</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
        "      <th>geometry</th>\n",
-       "      <th>GRUMP2015_PopTot</th>\n",
+       "      <th>WP2015_PopTot</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>27564946</td>\n",
-       "      <td>301</td>\n",
-       "      <td>POLYGON ((6.508333 36.475, 6.525 36.475, 6.525...</td>\n",
-       "      <td>8.080542e+05</td>\n",
+       "      <td>1044</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Constantine</td>\n",
+       "      <td>36.364519</td>\n",
+       "      <td>6.608260</td>\n",
+       "      <td>POLYGON ((6.624583 36.474584, 6.641249 36.4745...</td>\n",
+       "      <td>720445.744751</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>27565103</td>\n",
-       "      <td>582</td>\n",
-       "      <td>POLYGON ((-0.808333 35.775, -0.791667 35.775, ...</td>\n",
-       "      <td>1.359337e+06</td>\n",
+       "      <td>2095</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Oran</td>\n",
+       "      <td>35.703275</td>\n",
+       "      <td>-0.649298</td>\n",
+       "      <td>POLYGON ((-0.808751 35.774584, -0.792084 35.77...</td>\n",
+       "      <td>954885.229431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>262963217</td>\n",
-       "      <td>1419</td>\n",
-       "      <td>POLYGON ((6.883333 33.433333, 6.9 33.433333, 6...</td>\n",
-       "      <td>1.580997e+05</td>\n",
+       "      <td>253292160</td>\n",
+       "      <td>378</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Tizi Ouzou</td>\n",
+       "      <td>36.713784</td>\n",
+       "      <td>4.049392</td>\n",
+       "      <td>POLYGON ((3.966249 36.76625, 3.991249 36.76625...</td>\n",
+       "      <td>390892.028687</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>288387133</td>\n",
-       "      <td>83</td>\n",
-       "      <td>POLYGON ((3.008333 36.825, 3.016667 36.825, 3....</td>\n",
-       "      <td>5.040620e+06</td>\n",
+       "      <td>262963217</td>\n",
+       "      <td>4229</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>El Oued</td>\n",
+       "      <td>33.361177</td>\n",
+       "      <td>6.860349</td>\n",
+       "      <td>POLYGON ((6.816249 33.424584, 6.824583 33.4245...</td>\n",
+       "      <td>149154.208923</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>288417925</td>\n",
-       "      <td>338</td>\n",
-       "      <td>POLYGON ((2.75 36.341667, 2.758333 36.341667, ...</td>\n",
-       "      <td>1.494868e+05</td>\n",
+       "      <td>262964638</td>\n",
+       "      <td>4333</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Touggourt</td>\n",
+       "      <td>33.109897</td>\n",
+       "      <td>6.066102</td>\n",
+       "      <td>POLYGON ((6.066249 33.157917, 6.082916 33.1579...</td>\n",
+       "      <td>84953.643616</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>288418022</td>\n",
-       "      <td>83</td>\n",
-       "      <td>POLYGON ((3.008333 36.825, 3.016667 36.825, 3....</td>\n",
-       "      <td>5.040620e+06</td>\n",
+       "      <td>264573224</td>\n",
+       "      <td>3922</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Laghouat</td>\n",
+       "      <td>33.806352</td>\n",
+       "      <td>2.880862</td>\n",
+       "      <td>POLYGON ((2.849583 33.86625, 2.866249 33.86625...</td>\n",
+       "      <td>184852.065430</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      osm_id   FID                                           geometry  \\\n",
-       "0   27564946   301  POLYGON ((6.508333 36.475, 6.525 36.475, 6.525...   \n",
-       "1   27565103   582  POLYGON ((-0.808333 35.775, -0.791667 35.775, ...   \n",
-       "2  262963217  1419  POLYGON ((6.883333 33.433333, 6.9 33.433333, 6...   \n",
-       "3  288387133    83  POLYGON ((3.008333 36.825, 3.016667 36.825, 3....   \n",
-       "4  288417925   338  POLYGON ((2.75 36.341667, 2.758333 36.341667, ...   \n",
-       "5  288418022    83  POLYGON ((3.008333 36.825, 3.016667 36.825, 3....   \n",
+       "      osm_id   FID  country         city        lat       lon  \\\n",
+       "0   27564946  1044  Algeria  Constantine  36.364519  6.608260   \n",
+       "1   27565103  2095  Algeria         Oran  35.703275 -0.649298   \n",
+       "2  253292160   378  Algeria   Tizi Ouzou  36.713784  4.049392   \n",
+       "3  262963217  4229  Algeria      El Oued  33.361177  6.860349   \n",
+       "4  262964638  4333  Algeria    Touggourt  33.109897  6.066102   \n",
+       "5  264573224  3922  Algeria     Laghouat  33.806352  2.880862   \n",
        "\n",
-       "   GRUMP2015_PopTot  \n",
-       "0      8.080542e+05  \n",
-       "1      1.359337e+06  \n",
-       "2      1.580997e+05  \n",
-       "3      5.040620e+06  \n",
-       "4      1.494868e+05  \n",
-       "5      5.040620e+06  "
+       "                                            geometry  WP2015_PopTot  \n",
+       "0  POLYGON ((6.624583 36.474584, 6.641249 36.4745...  720445.744751  \n",
+       "1  POLYGON ((-0.808751 35.774584, -0.792084 35.77...  954885.229431  \n",
+       "2  POLYGON ((3.966249 36.76625, 3.991249 36.76625...  390892.028687  \n",
+       "3  POLYGON ((6.816249 33.424584, 6.824583 33.4245...  149154.208923  \n",
+       "4  POLYGON ((6.066249 33.157917, 6.082916 33.1579...   84953.643616  \n",
+       "5  POLYGON ((2.849583 33.86625, 2.866249 33.86625...  184852.065430  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "GRUMP2015_zonalstats = zone_stat(GRUMP2015_raster, 1, GRUMP2015_poly)\n",
-    "GRUMP2015_poly['GRUMP2015_PopTot'] = gpd.GeoDataFrame.from_dict(GRUMP2015_zonalstats)\n",
-    "GRUMP2015_poly.head(6)"
+    "WP2015_zonalstats = zone_stat(WP2015_raster, 1, WP2015_poly)\n",
+    "WP2015_poly['WP2015_PopTot'] = gpd.GeoDataFrame.from_dict(WP2015_zonalstats)\n",
+    "WP2015_poly.head(6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# WP2000_poly.to_file(outfilepath+'20181204_WP2000_zone_pop.shp', driver='ESRI Shapefile')c"
+    "WP2000_poly.to_file(temp_data+'20181207_WP2000_zone_pop.shp', driver='ESRI Shapefile')\n",
+    "WP2015_poly.to_file(temp_data+'20181207_WP2015_zone_pop.shp', driver='ESRI Shapefile')"
    ]
   },
   {
@@ -347,18 +412,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "GRUMP2000_poly.to_csv(temp_data+'20181205_GRUMP2000_zone_pop.csv')\n",
-    "GRUMP2015_poly.to_csv(temp_data+'20181205_GRUMP2015_zone_pop.csv')"
+    "WP2000_poly.to_csv(temp_data+'20181207_WP2000_zone_pop.csv')\n",
+    "WP2015_poly.to_csv(temp_data+'20181207_WP2015_zone_pop.csv')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -372,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
