--- a/notebooks/jupyter/OSM_Python_Query.ipynb
+++ b/notebooks/jupyter/OSM_Python_Query.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,24 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "elasped time to do the quary:176.21600008010864\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import time\n",
+    "# import time\n",
     "import requests\n",
     "import json\n",
     "\n",
     "# Check time\n",
-    "checkpoint = time.time()\n",
+    "# checkpoint = time.time()\n",
     "\n",
     "# Loop through all OSM countries\n",
     "response_dict = {}\n",
@@ -160,9 +152,7 @@
     "    overpass_query = \"\"\"\n",
     "            [out:json];\n",
     "            area[\"name:en\"=\"{}\"];  \n",
-    "            (node[place=city](area);\n",
-    "            way[place=city](area);\n",
-    "            rel[place=city](area);\n",
+    "            (node[place=town](area);\n",
     "            );\n",
     "            out center;\n",
     "            \"\"\".format(country_name)\n",
@@ -171,12 +161,17 @@
     "    data = response.json()\n",
     "    response_dict[country_name] = data\n",
     "\n",
-    "print('elasped time to do the quary:{}'.format(time.time() - checkpoint))    "
+    "# print('elasped time to do the quary:{}'.format(time.time() - checkpoint))    \n",
+    "\n",
+    "# Cut this on 2019 - 1 - 19 \n",
+    "\n",
+    "#            way[place=town](area);\n",
+    "#            rel[place=town](area);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -185,13 +180,33 @@
        "54"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(response_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Oran'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_dict['Algeria']['elements'][1]['tags']['name']"
    ]
   },
   {
@@ -203,11 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# temp_data = '../../temp_data/'\n",
+    "temp_data = '../../temp_data/'\n",
     "\n",
     "# with open(temp_data+'20181206_osmafrica_cities_all.json', 'w') as fp:\n",
     "#      json.dump(response_dict, fp)"
@@ -215,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,127 +250,44 @@
     "    for country in response_dict:    \n",
     "        for element in response_dict[country]['elements']:\n",
     "            country = country\n",
-    "            i_d = str(element['id']) #keep as string for now\n",
+    "            osm_id = str(element['id']) #keep as string for now\n",
     "            lat = element['lat']\n",
     "            lon = element['lon']\n",
-    "            coords.append((country, i_d, lat, lon))\n",
+    "            \n",
+    "            if 'name' not in element['tags']: \n",
+    "                city = 'NA'\n",
+    "            else: \n",
+    "                city = element['tags']['name']\n",
+    "                    \n",
+    "            coords.append((country, osm_id, city, lat, lon,))\n",
     "\n",
     "    coords_arr = np.array(coords)\n",
     "    #coords_arr\n",
     "    \n",
     "    # make dataframe\n",
     "    coords_df = pd.DataFrame(data=coords_arr)\n",
-    "    coords_df.columns = ['country','osm_id','lat','lon']\n",
+    "    coords_df.columns = ['country','osm_id','town', 'lat','lon']\n",
     "\n",
     "    return coords_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>country</th>\n",
-       "      <th>osm_id</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>27564946</td>\n",
-       "      <td>36.364519</td>\n",
-       "      <td>6.60826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>27565103</td>\n",
-       "      <td>35.7032751</td>\n",
-       "      <td>-0.6492976</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>253292160</td>\n",
-       "      <td>36.7137843</td>\n",
-       "      <td>4.0493919</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>262963217</td>\n",
-       "      <td>33.3611766</td>\n",
-       "      <td>6.8603492</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>262964638</td>\n",
-       "      <td>33.1098968</td>\n",
-       "      <td>6.066102</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   country     osm_id         lat         lon\n",
-       "0  Algeria   27564946   36.364519     6.60826\n",
-       "1  Algeria   27565103  35.7032751  -0.6492976\n",
-       "2  Algeria  253292160  36.7137843   4.0493919\n",
-       "3  Algeria  262963217  33.3611766   6.8603492\n",
-       "4  Algeria  262964638  33.1098968    6.066102"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "osm_cities = osm_coords(response_dict)\n",
-    "osm_cities.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "871\n"
+      "8175\n"
      ]
     }
    ],
    "source": [
-    "print(len(osm_cities))"
+    "osm_town = osm_coords(response_dict)\n",
+    "osm_town.head()\n",
+    "print(len(osm_town))"
    ]
   },
   {
@@ -367,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +308,11 @@
     "# NOTE - on 11-29-18 pulled 872 osm 'city' centroids w/o names to be used for AGU analysis \n",
     "# NOTE - on 12-06-18 pulled 871 -note missing- osm 'city' centroids countries to be used for AGU analysis \n",
     "\n",
-    "osm_cities.to_csv(temp_data+'20181206_osm_africa_cities_match.csv', sep=',', index=False, header=True)"
+    "# Note - on 01-14-19 pulled 876 osm 'city' level for ERL submission, saved filed as \"20190114_osm_africa_cities.csv\"\n",
+    "# Note - on 01-14-19 pulled 8175 osm 'town' level for ERL submission, saved filed as \"20190114_osm_africa_towns.csv\"\n",
+    "\n",
+    "\n",
+    "osm_city.to_csv(temp_data+'20190114_osm_africa_towns.csv', sep=',', index=False, header=True)"
    ]
   },
   {
@@ -620,7 +556,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -634,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
