--- a/notebooks/jupyter/New_Raster_Mask.ipynb
+++ b/notebooks/jupyter/New_Raster_Mask.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "temp_data = '../../temp_data/'\n",
     "raster_interim = '../../data/interim/'\n",
-    "raster_raw = '../../data/raw/'"
+    "raster_raw = '../../data/'"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,17 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = rasterio.open(raster_interim+'LandScan2015_w001001_Clip.tif')\n",
+    "file = rasterio.open(raster_raw+'GHS_POP_GPW42015_GLOBE_R2000A_54009_1k_v1_0_Clip.tif')\n",
     "crs = file.crs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -140,13 +140,13 @@
      "output_type": "stream",
      "text": [
       "                                            geometry\n",
-      "0  POLYGON ((-25.466667 37.441667, -25.466667 -34...\n",
-      "1  POLYGON ((20.258333 -34.566667, 20.266667 -34....\n",
-      "2  POLYGON ((9.824999999999999 37.3, 9.8249999999...\n",
-      "3  POLYGON ((20.225 -34.558333, 20.233333 -34.558...\n",
-      "4  POLYGON ((9.85 37.3, 9.85 37.283333, 9.8416669...\n",
-      "5  POLYGON ((22.033333 -34.191667, 22.033333 -34....\n",
-      "36174\n"
+      "0  POLYGON ((-25.462978 37.445441, -25.462978 -34...\n",
+      "1  POLYGON ((19.19249 -34.420127, 19.201473 -34.4...\n",
+      "2  POLYGON ((9.849966 37.30171, 9.849966 37.29272...\n",
+      "3  POLYGON ((22.103045 -34.186564, 22.112028 -34....\n",
+      "4  POLYGON ((19.237406 -34.411144, 19.246389 -34....\n",
+      "5  POLYGON ((18.985876 -34.150631, 19.021809 -34....\n",
+      "37631\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -187,27 +187,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>POLYGON ((20.258333 -34.566667, 20.266667 -34....</td>\n",
+       "      <td>POLYGON ((19.19249 -34.420127, 19.201473 -34.4...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>POLYGON ((9.824999999999999 37.3, 9.8249999999...</td>\n",
+       "      <td>POLYGON ((9.849966 37.30171, 9.849966 37.29272...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>POLYGON ((20.225 -34.558333, 20.233333 -34.558...</td>\n",
+       "      <td>POLYGON ((22.103045 -34.186564, 22.112028 -34....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>POLYGON ((9.85 37.3, 9.85 37.283333, 9.8416669...</td>\n",
+       "      <td>POLYGON ((19.237406 -34.411144, 19.246389 -34....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>POLYGON ((22.033333 -34.191667, 22.033333 -34....</td>\n",
+       "      <td>POLYGON ((18.985876 -34.150631, 19.021809 -34....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>POLYGON ((19.225 -34.416667, 19.233333 -34.416...</td>\n",
+       "      <td>POLYGON ((19.19249 -34.222497, 19.201473 -34.2...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -215,15 +215,15 @@
       ],
       "text/plain": [
        "                                            geometry\n",
-       "1  POLYGON ((20.258333 -34.566667, 20.266667 -34....\n",
-       "2  POLYGON ((9.824999999999999 37.3, 9.8249999999...\n",
-       "3  POLYGON ((20.225 -34.558333, 20.233333 -34.558...\n",
-       "4  POLYGON ((9.85 37.3, 9.85 37.283333, 9.8416669...\n",
-       "5  POLYGON ((22.033333 -34.191667, 22.033333 -34....\n",
-       "6  POLYGON ((19.225 -34.416667, 19.233333 -34.416..."
+       "1  POLYGON ((19.19249 -34.420127, 19.201473 -34.4...\n",
+       "2  POLYGON ((9.849966 37.30171, 9.849966 37.29272...\n",
+       "3  POLYGON ((22.103045 -34.186564, 22.112028 -34....\n",
+       "4  POLYGON ((19.237406 -34.411144, 19.246389 -34....\n",
+       "5  POLYGON ((18.985876 -34.150631, 19.021809 -34....\n",
+       "6  POLYGON ((19.19249 -34.222497, 19.201473 -34.2..."
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,19 +236,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# write out polygons \n",
     "\n",
-    "poly_gdf1500.to_file(temp_data+'LandScan2015_w001001_Clip.tif_1500.shp', driver='ESRI Shapefile')"
+    "poly_gdf1500.to_file(temp_data+'WPE_1KM_2016_Pop_Clip.shp', driver='ESRI Shapefile')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -262,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
