--- a/notebooks/jupyter/Raster_clip.ipynb
+++ b/notebooks/jupyter/Raster_clip.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,18 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raster = raster_in+'LandScan-Global-2015/lspop2015/w001001.adf'\n",
-    "shape = temp_data+'20190114_Africabase.shp'\n",
-    "file = raster_out+'LandScan2015_w001001_Clip.tif'"
+    "raster = raster_in+'ghs-pop/GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0/GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0.tif'\n",
+    "shape = temp_data+'20190114_Africabase_EPSG54009.shp'\n",
+    "file = raster_out+'GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0_Clip.tif'\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,85 +109,11 @@
     "test = rasterio.open(file)\n",
     "test.meta"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "GHS2000 = rasterio.open(raster)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'driver': 'GTiff',\n",
-       " 'dtype': 'float32',\n",
-       " 'nodata': 3.4028234663852886e+38,\n",
-       " 'width': 35336,\n",
-       " 'height': 17071,\n",
-       " 'count': 1,\n",
-       " 'crs': CRS({'init': 'epsg:4326'}),\n",
-       " 'transform': Affine(0.010152911316938011, 0.0, -179.73259215057786,\n",
-       "        0.0, -0.008179005658007374, 83.63964763391378)}"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "GHS2000.meta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ESRI2016 = rasterio.open(data_in+'ESRI_WPE_2016_Pop/WPE_1KM_2016_Pop.tif')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'driver': 'GTiff',\n",
-       " 'dtype': 'int32',\n",
-       " 'nodata': -2147483647.0,\n",
-       " 'width': 40074,\n",
-       " 'height': 14285,\n",
-       " 'count': 1,\n",
-       " 'crs': CRS({'init': 'epsg:4326'}),\n",
-       " 'transform': Affine(0.008983196, 0.0, -179.99191516916386,\n",
-       "        0.0, -0.008983196, 73.32432599999953)}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ESRI2016.meta"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -200,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
